# SoilFreezeThaw

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  MODEL.md  README.md  RUN.md  build_models.sh  make_run_cfe_aorc_ftm.sh  make_run_cfe_aorc_pet_ftm.sh  run_framework.sh  run_sft.sh  sftbmi.pc.in
.github/workflows/: build_and_run_tests.yml  ngen_integration.yaml
bmi/: bmi.hxx
configs/: README.md  cat_87_bmi_config_cfe_pass.txt  cat_87_bmi_config_ftm.txt  laramie_bmi_config_aorc.txt  laramie_bmi_config_cfe_pass.txt  laramie_bmi_config_coupler.txt  laramie_bmi_config_ftm.txt  laramie_bmi_config_ftm_standalone.txt  laramie_bmi_config_pet_pass.txt  laramie_bmi_config_smc_coupler.txt  laramie_bmi_config_smp.txt  laramie_config.txt  laramie_config_sft.txt  laramie_config_sft_standalone.txt  laramie_config_smp.txt  realization_config_multi.json  realization_config_multi_linux.json  realization_config_multi_macos.json  realization_config_nom.json  realization_config_standalone.json  realization_config_standalone_linux.json  realization_config_standalone_macos.json
configs/HUC01/nom/: cat-20521.input
configs/HUC01/sft/: cat-20521.txt
configs/HUC01/smp/: cat-20521.txt
examples/: README.md
examples/configs/cfe/: cat-20521.txt
examples/configs/lasam/: cat-20521.txt
examples/configs/lgar/: cat-20521.txt
examples/configs/nom/: cat-20521.input
examples/configs/smp_cfe/: cat-20521.txt
examples/configs/smp_lgar/: cat-20521.txt
examples/realizations/: realization_cfe.json  realization_config_nom.json  realization_lasam.json  realization_w_cfe.json
externalmodels/bmi_coupler/: make_bmi_coupler.sh
externalmodels/bmi_coupler/include/: bmi_coupler.hxx  smc_profile.hxx
externalmodels/bmi_coupler/src/: bmi_coupler.cxx  bmi_main.cxx  smc_profile.cxx
externalmodels/bmi_coupler/test/: config.txt
externalmodels/bmi_freezethaw/: run_bmi_freezethaw
externalmodels/bmi_freezethaw/include/: bmi_freezethaw.hxx  freezethaw.hxx
externalmodels/bmi_freezethaw/src/: bmi_freezethaw.cxx  bmi_main.cxx  freezethaw.cxx
externalmodels/bmi_freezethaw/test/: main_unit_test_bmi.cxx  main_unit_test_damping_depth.cxx  make_bmi_freezethaw.sh
externalmodels/bmi_freezethaw/test/configs/: laramie_bmi_config_ftm.txt
externalmodels/bmi_freezethaw/testing/: config.txt
externalmodels/bmi_freezethawcxx/: make_bmi_freezethaw.sh
externalmodels/bmi_freezethawcxx/include/: bmi_freezethaw.hxx  freezethaw.hxx
externalmodels/bmi_freezethawcxx/src/: bmi_freezethaw.cxx  freezethaw.cxx
externalmodels/bmi_freezethawcxx/test/: make_bmi_freezethaw.sh
externalmodels/bmi_freezethawcxx/testing/: config.txt
forcing_code/include/: PEtAerodynamicMethod.h  pet.h  pet_tools.h
forcing_code/src/: bmi_aorc.c  bmi_pet.c  pet.c
forcings/: Laramie_14Jun09_to_15Apr12-.csv  Laramie_14Jun09_to_15Apr12.csv  Laramie_14Jun09_to_15Apr12_ngen.csv
include/: bmi.hxx  bmi_cfe.h  bmi_freezethaw.hxx  bmi_soil_freeze_thaw.hxx  cfe.h  freezethaw.hxx  soil_freeze_thaw.hxx
py_cfe/standalonemodels/freezethaw/: FrozenSoilModule-DampingDepthExample.ipynb  FrozenSoilModule.ipynb  frozensoil.py  heatequation.py
py_cfe/standalonemodels/freezethaw/configs/: cat_58_bmi_config_cfe.txt  config.json  config_dd.json
realizations/: ngen_realization_multi.json  realization_coupled.json  realization_multi.json  realization_multi_ngenCI.json  realization_standalone.json
smc_coupler/: make_bmi_coupler.sh
smc_coupler/include/: bmi_coupler.hxx  smc_profile.hxx
smc_coupler/src/: bmi_coupler.cxx
smc_coupler/test/: config.txt
src/: bmi_cfe.c  bmi_freezethaw.cxx  bmi_main.cxx  bmi_soil_freeze_thaw.cxx  cfe.c  freezethaw.cxx  main_cfe_aorc_ftm.cxx  main_cfe_aorc_pet_ftm.cxx  main_cfe_aorc_pet_ftm_smc.cxx  main_pass_forcings.cxx  main_pseudo_framework.cxx  main_sft.cxx  main_standalone.cxx  soil_freeze_thaw.cxx
test/: README.md  file_golden.csv  main_unit_test_bmi.cxx  main_unittest.cxx  run_unittest.sh  test_standalone_ngen.py
test/configs/: laramie_bmi_config_ftm.txt  unittest.txt
tests/: README.md  main_unittest.cxx  run_unittest.sh  test_standalone_ngen.py
tests/configs/: unittest.txt
